Followup on review NS-20.